# simple-pascal-compiler

./: .gitignore  Makefile  hello.pas  sandboxes.sh  simple-pascal.cabal  spc.hs  test.hs
Language/Pascal/: Builtin.hs  CodeGen.hs  Parser.hs  TypeCheck.hs  Types.hs
Language/Pascal/JVM/: CodeGen.hs
Language/Pascal/SSVM/: Builtin.hs  CodeGen.hs  Types.hs
spc/: Test.pas  hello.pas  simple-pascal-compiler.cabal  spc.hs
spc-jvm/: Test.hs  Test.java  simple-pascal-jvm.cabal
spc-jvm/Language/Pascal/JVM/: Builtin.hs  CodeGen.hs  Types.hs
spc-ssvm/: simple-pascal-ssvm.cabal
spc-ssvm/Language/Pascal/SSVM/: Builtin.hs  CodeGen.hs  Types.hs
