Name:           simple-pascal
Version:        0.1
Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Ilya V. Portnov
Maintainer:     portnov84@rambler.ru
Synopsis:       Simplified Pascal language to SSVM compiler
Category:       Languages, Compilers/Interpreters
Build-Type:     Simple
Description:    This package provides a compiler for simplified variant of Pascal language.
                That language includes conditional statements, for loops, procedures and
                functions. But it does not support complex data types (only integer, string
                and boolean are supported currently).
                This compiler outputs bytecode which may be run by SSVM (see simple-stacked-vm
                package).

Extra-source-files: hello.pas Makefile

library
  Exposed-Modules: Language.Pascal.Types
                   Language.Pascal.Parser
                   Language.Pascal.TypeCheck
                   Language.Pascal.SSVM.CodeGen
                   Language.Pascal.SSVM.Builtin
                   Language.Pascal.JVM.CodeGen

  Build-Depends:  base >= 3 && <= 5, containers,
                  mtl > 1, filepath, parsec >= 3,
                  syb,
                  simple-stacked-vm >= 0.1.1,
                  hs-java >= 0.3.4,
                  control-monad-exception

  ghc-options: -fwarn-unused-imports

executable spc
  Main-is: spc.hs


